[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyhal = { path = ".."}
crate_interface = { git = "https://github.com/Byte-OS/crate_interface.git" }

log = "0.4"
fdt = "0.1.5"
buddy_system_allocator = "0.9.1"
spin = { version = "0.9.8", features = ["mutex"] }
yaxpeax-x86 = { version = "*", default-features = false, features = ["fmt"] }
yaxpeax-arch = { version = "0.2.8", default-features = false }
bit_field = "0.10.2"